<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/PREF_TITLE">
    <PreferenceCategory android:title="@string/PREF_UPDATE_CATEGORY_TITLE" android:key="@string/PREF_UPDATE_CATEGORY_KEY">
		<PreferenceScreen
            android:key="@string/PREF_UPDATE_KEY"
            android:title="@string/PREF_UPDATE_TITLE"
            android:summary="@string/PREF_UPDATE_SUMMAY"
	        android:icon="@drawable/ic_pref_update"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/PREF_GENERAL">
        <CheckBoxPreference 
	        android:key="@string/PREF_ANIMATION_KEY"
	        android:title="@string/PREF_ANIMATION_TITLE" 
	        android:summaryOn="@string/PREF_ANIMATION_SUMMARY_ON"
	        android:summaryOff="@string/PREF_ANIMATION_SUMMARY_OFF"
	        android:summary="@string/PREF_ANIMATION_SUMMARY_ON" 
	        android:defaultValue="true"
	        android:icon="@drawable/ic_pref_animation"
	        />
	    <CheckBoxPreference
	        android:key="@string/PREF_BRIGHTNESS_KEY" 
	        android:title="@string/PREF_BRIGHTNESS_TITLE" 
	        android:summaryOn="@string/PREF_BRIGHTNESS_SUMMARY_ON"
	        android:summaryOff="@string/PREF_BRIGHTNESS_SUMMARY_OFF"
	        android:defaultValue="true"
	        android:icon="@drawable/ic_pref_brightness"
	        />
    </PreferenceCategory>
	<PreferenceCategory android:title="@string/PREF_ABOUT_TITLE">
	    <PreferenceScreen 
	        android:key="@string/PREF_ABOUT_RATE_KEY"
	        android:title="@string/PREF_ABOUT_RATE_TITLE" 
	        android:summary="@string/PREF_ABOUT_RATE_SUMMARY" 
	        android:icon="@drawable/ic_pref_star"
	        />
	    <PreferenceScreen
	        android:key="@string/PREF_ABOUT_VERSION_KEY" 
	        android:title="@string/PREF_ABOUT_VERSION_TITLE" 
	        android:summary="@string/PREF_ABOUT_VERSION_SUMMARY"
	        android:icon="@drawable/ic_launcher"
	        />
	</PreferenceCategory>
    <PreferenceCategory android:title="@string/PREF_INVISIBLE_CATEGORY_KEY" android:key="@string/PREF_INVISIBLE_CATEGORY_KEY">
        <CheckBoxPreference
	    	android:key="@string/PREF_APP_ISRATED_KEY"
	        android:defaultValue="false"
	        />
        <EditTextPreference
            android:key="@string/PREF_ADS_XML_LASTMODIFIED_KEY"
            android:defaultValue="@null"
            />
        <EditTextPreference
            android:key="@string/PREF_APPSUPDATE_XML_LASTMODIFIED_KEY"
            android:defaultValue="@null"
            />
        <EditTextPreference
            android:key="@string/PREF_APK_NEWVERSION_CODE_KEY"
            android:defaultValue="@null"
            />
        <EditTextPreference
            android:key="@string/PREF_APK_NEWVERSION_PACKAGE_KEY"
            android:defaultValue="@null"
            />
        <EditTextPreference
            android:key="@string/PREF_APK_NEWVERSION_URL_KEY"
            android:defaultValue="@null"
            />
        <EditTextPreference
            android:key="@string/PREF_APK_NEWVERSION_LASTMODIFIED_KEY"
            android:defaultValue="@null"
            />
		<EditTextPreference
            android:key="@string/PREF_APK_NEWVERSION_CONTENTLENGTH_KEY"
            android:defaultValue="@null"
            />
		<EditTextPreference
            android:key="@string/PREF_APP_RUNTIMES_KEY"
            android:defaultValue="@null"
            />
        <EditTextPreference
            android:key="@string/PREF_AD_UNIT_ID_KEY"
            android:defaultValue="@string/ad_banner_id"
            />
        <EditTextPreference
            android:key="@string/PREF_APK_VERSION_CODE_KEY"
            android:defaultValue="@null"
            />
	</PreferenceCategory>
</PreferenceScreen>
